Add a stub for Express app

--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "node.js coding excercise",
   "main": "index.js",
   "scripts": {
+    "start": "node src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
