--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "author": "",
   "license": "ISC",
+  "prettier": {
+    "singleQuote": true
+  },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.8"
   }
 }
