--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit --recursive \"./src/*.test.js\""
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.2.0",
     "prettier": "^2.8.8"
   }
 }
